examples/testsmbc.c - quiet implicit cast warnings on OpenSolaris

https://bugzilla.samba.org/show_bug.cgi?id=8767

Signed-off-by: Andrew Tridgell <tridge@samba.org>